# KTH-KompEx

./: .gitignore  README.md
cigrid/: app.cabal  compile_and_run.sh  examples.cpp  makefile  test.c
cigrid/.stack-work/: stack.sqlite3
cigrid/.stack-work/ghci/1c62eb4a/: cabal_macros.h
cigrid/src/: AsmPrettyPrinter.hs  AstPrettyPrinter.hs  InstructionGenerator.hs  Main.hs  Parser.hs  PrettyPrinter.hs  Tokenizer.hs
lab1/: README.md
lab1/.stack-work/: stack.sqlite3
lab1/calc/: app.cabal  makefile  stack.yaml
lab1/calc/.stack-work/: stack.sqlite3
lab1/calc/.stack-work/ghci/2496dd31/: cabal_macros.h
lab1/calc/src/: Main.hi  Main.hs
lab1/cigrid/: hie.yaml  stack.yaml
lab1/cigrid/.stack-work/: stack.sqlite3
lab1/cigrid/src/: Main.hs  Parser.hs  PrettyPrinter.hs  Tokenizer.hs
lab2/asm/: main-asm.asm  main-c.c  makefile
lab3/theory/: answers.md  assignment.md
