name: app
version: 0.1.0.0
author: Daniel Gustafsson
build-type: Simple
cabal-version: >=2

executable cigrid
  hs-source-dirs: src
  main-is: Main.hs
  other-modules: Tokenizer
               , Parser
               , PrettyPrinter
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -funbox-strict-fields
  build-depends: base
               , containers
               , unordered-containers
               , filepath
               , text
               , pretty-show
               , prettyprinter
               , optparse-applicative
               , uniplate
               , protolude
               , recursion-schemes